Modern-Java idiom pass across the small stuff
No behavior changes, just tightening:
- Math.clamp (Java 21+) replaces hand-rolled min/max clamping in the homing
  dot-product and the bow-force clamp01.
- impactNormal drops its boxed Integer[] sort for a small Face record ordered
  by approach strength via a stream — same face-selection logic, no boxing,
  and the "pocket" fallback is now stated in one place.
- ModifierStack.ids()/contains() become stream one-liners.
- WeaponBuilder.compile's parameter no longer shadows the projectile-stack
  field of the same name.
- ModifierRegistry imports LinkedHashSet instead of naming it inline; the
  Showcase roster is built once into a constant instead of per call.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Djz33s3EdzKP3Sw9HjYNgE