@@ -1,9 +1,12 @@
 package com.xton.fusion.projectile;
 
+import java.util.Comparator;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.stream.Stream;
 
 import org.bukkit.Location;
 import org.bukkit.Material;
@@ -213,8 +216,7 @@ public final class FusionProjectile extends BukkitRunnable {
         }
         Vector cur = velocity.clone().multiply(1.0 / speed);
         double maxTurn = HOMING_TURN_PER_STACK * spec.homing();
-        double dot = Math.max(-1.0, Math.min(1.0, cur.dot(desired)));
-        double angle = Math.acos(dot);
+        double angle = Math.acos(Math.clamp(cur.dot(desired), -1.0, 1.0));
         Vector dir;
         if (angle <= maxTurn || angle < 1.0e-4) {
             dir = desired; // close enough to point straight at it
@@ -348,6 +350,10 @@ public final class FusionProjectile extends BukkitRunnable {
         return hardness >= 0 && hardness <= spec.pierceMaxHardness();
     }
 
+    /** One candidate impact face: its outward normal and how hard the shot approached it. */
+    private record Face(Vector normal, double approach) {
+    }
+
     /**
      * The outward normal of the block face the shot entered — the axis it
      * approached most strongly whose neighbour that way is open, so we reflect
@@ -355,28 +361,22 @@ public final class FusionProjectile extends BukkitRunnable {
      */
     private Vector impactNormal(Location impact) {
         Block hit = impact.getBlock();
-        Vector[] faces = {
-            new Vector(-Math.signum(velocity.getX()), 0, 0),
-            new Vector(0, -Math.signum(velocity.getY()), 0),
-            new Vector(0, 0, -Math.signum(velocity.getZ())),
-        };
-        double[] mag = {Math.abs(velocity.getX()), Math.abs(velocity.getY()), Math.abs(velocity.getZ())};
-        Integer[] order = {0, 1, 2};
-        java.util.Arrays.sort(order, (a, b) -> Double.compare(mag[b], mag[a]));
-        Vector fallback = null;
-        for (int idx : order) {
-            if (mag[idx] < 1.0e-9) {
-                continue; // no approach along this axis
-            }
-            Vector n = faces[idx];
-            if (fallback == null) {
-                fallback = n;
-            }
+        List<Face> faces = Stream.of(
+                        new Face(new Vector(-Math.signum(velocity.getX()), 0, 0), Math.abs(velocity.getX())),
+                        new Face(new Vector(0, -Math.signum(velocity.getY()), 0), Math.abs(velocity.getY())),
+                        new Face(new Vector(0, 0, -Math.signum(velocity.getZ())), Math.abs(velocity.getZ())))
+                .filter(face -> face.approach() >= 1.0e-9) // no approach along this axis
+                .sorted(Comparator.comparingDouble(Face::approach).reversed())
+                .toList();
+        for (Face face : faces) {
+            Vector n = face.normal();
             if (!hit.getRelative(n.getBlockX(), n.getBlockY(), n.getBlockZ()).getType().isSolid()) {
                 return n; // this face opens onto air — bounce out here
             }
         }
-        return fallback != null ? fallback : new Vector(0, 1, 0);
+        // Every candidate neighbour is solid (a pocket): reflect off the strongest
+        // approach anyway, or straight up if the shot somehow had no velocity.
+        return faces.isEmpty() ? new Vector(0, 1, 0) : faces.get(0).normal();
     }
 
     /** The direction SPAWN children take off a block terminus: velocity reflected off the surface. */
